--- a/README.org
+++ b/README.org
@@ -84,7 +84,6 @@ self.cards.remove(c)
     - sort the keys (which represent the different cards present)
     - if they're less than necessary it's at least a couple and we discard it, otherwise we take the k_{th} card
 
-
 ** C
    C code is written in c99 standard (not ansi).
    To make C code run as fast as possible we should avoid every expansive operation, like allocation of data structures at every cycle.
@@ -96,7 +95,9 @@ self.cards.remove(c)
 
     To get a real simulation we should shuffle the whole deck at every game, but that's too expansive.
     Another way is picking random cards with a random index in the range of the length. \\
-    To avoid picking the same card twice I shrink the array every time, swapping the selected card with the last one.
+    Even if the card to pick randomly are just a few we could still pick the same card, and randomly choose until one free card is found is in general not a good idea.
+
+    So I just shrink the array at every step swapping the chosen element with the last one.
 
     For example: \\
     [1, 2, 4, 3] \\
@@ -110,45 +111,45 @@ self.cards.remove(c)
     *deck->len = deck->orig\_len;*
     
 *** Hand
+    A hand is implemented like in python, with a dictionary [Card : #], with the difference that here when we need to always keep all indices.
+    So we also keep a variable *diffs* which keeps track of how many different cards have been found.
+    The rank then will be:
+    - *-1* if we don't have enough different cards
+    - the *diffs - eval + 1* card found scanning backwards the array otherwise
+    
+    A possible improvement would be to rank direcly in *give_cards*, whenever we know we'll certainly have a couple we could return *-1* (or call rank_hand when not possible).
+    In avarage is a bit faster but introduces a coupling between two functions which breaks the [[http://en.wikipedia.org/wiki/Single_responsibility_principle][SRP]].
 
-*** Using random and lrand48 gives exactly the same result (while rand differs).    And lrand48 is the slowest, also avoid using the modulo, is slower and it only uses least significant bits.
-     The random() function uses a non-linear, additive feedback, random number generator, employing a
-     default table of size 31 long integers.  It returns successive pseudo-random numbers in the range from
-     0 to (2**31)-1.  The period of this random number generator is very large, approximately
-     16*((2**31)-1).
+*** Random generator
+    Using random and lrand48 gives exactly the same result (while rand differs).    And lrand48 is the slowest, also avoid using the modulo, is slower and it only uses least significant bits.
+    The random() function uses a non-linear, additive feedback, random number generator, employing a
+    default table of size 31 long integers.  It returns successive pseudo-random numbers in the range from
+    0 to (2**31)-1.  The period of this random number generator is very large, approximately
+    16*((2**31)-1).
 
-     The rand48() family of functions generates pseudo-random numbers, using a linear congruential algorithm
-     working on integers 48 bits in size.  The particular formula employed is r(n+1) = (a * r(n) + c) mod m.
-     The default value for the multiplicand `a' is 0xfdeece66d (25214903917).  The default value for the the
-     addend `c' is 0xb (11).  The modulo is always fixed at m = 2 ** 48.  r(n) is called the seed of the
-     random number generator.
+    The rand48() family of functions generates pseudo-random numbers, using a linear congruential algorithm
+    working on integers 48 bits in size.  The particular formula employed is r(n+1) = (a * r(n) + c) mod m.
+    The default value for the multiplicand `a' is 0xfdeece66d (25214903917).  The default value for the the
+    addend `c' is 0xb (11).  The modulo is always fixed at m = 2 ** 48.  r(n) is called the seed of the
+    random number generator.
     
 * Testing
   I used [fn:1] for testing python code, it looks in the current directory and try to run all the tests that it finds.
 
-* Timing/profiling
-
 * Objectives
-** Design a nice structure
-
-** See how to run test units in many languages
-
-** Compare the performances and the possibilities given
-
-** Write a distributed version in erlang/python and see how they behaves
-
-** Make it fast!
-   A nice metric would be the
-   #simulations / seconds
-   The output could be equal for all the different languages and still parsable and analyzable automatically.
+  - Design a nice structure
+  - See how to run test units in many languages
+  - Compare the performances and the possibilities given
+  - Make it fast!
 
 * Speed comparison
 
 ** Pure python
-
-** Cython
+   Python can't be 
 
 ** Pure C
+   C program for simulations runs very fast, in fact as you can see the bottleneck became the ramdom number generator.
+   [[file:profiled.pdf]]
 
 * Random generators
   - [[http://en.wikipedia.org/wiki/Pseudorandom_number_generator][Pseudorandom number generator]]
